# alfred_search_google_images

./: .gitignore  README.md  info.plist  pyproject.toml
.serena/: project.yml
.serena/memories/: completion_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
openspec/changes/add-google-image-grid-workflow/: design.md  proposal.md  tasks.md
openspec/changes/add-google-image-grid-workflow/specs/google-image-grid-workflow/: spec.md
scripts/: package.sh
tests/: test_action.py  test_alfred.py  test_cache.py  test_google.py  test_search.py
workflow/: __init__.py  action.py  alfred.py  cache.py  google.py  search.py
